# postmaster

./: .ghci  .gitignore  .monotonerc  .mtn-ignore  .todo  .travis.yml  GNUmakefile  Jamfile.v2  Jamroot  Postmaster.hs  README  README.md  basic-esmtp-session.txt  cabal.project  driver.py  hook.cpp  logging.cpp  logging.hpp  main.cpp  nocase-string.hpp  noop  parser.hpp  postmaster-spec.txt  postmaster.cabal  postmaster.cf  postmaster.hpp  prologue.txt  routing.cpp  system-error.cpp  target.cpp  target.hpp  test-address-parser.cpp  test-nocase-string.cpp  test-pattern-matching.cpp  test-process-pool.cpp  test-route-parser.cpp  test-routing.cpp  test-target.cpp  timeout.cpp  tutorial.lhs
.github/workflows/: haskell-ci.yml  hlint.yml
Postmaster/: Base.hs  Env.hs  Event.hs  Extern.hs  FSM.hs  IO.hs  Main.hs  Meta.hs  Target.hs
Postmaster/FSM/: Announce.hs  DNSResolver.hs  DataHandler.hs  EhloPeer.hs  EventHandler.hs  HeloName.hs  MailFrom.hs  MailID.hs  PeerAddr.hs  PeerHelo.hs  SessionState.hs  Spooler.hs
config-test/: Config.cf  config.maude  sample
doc/: postmaster-spec.txt  rfc-compliance.txt
src/: .todo  Jamfile.v2  Main.hs  Postmaster.hs  async.hpp  error.hpp  esmtp.hpp  io.hpp  main.cpp  parser.hpp  postmaster.hpp  signal_block.hpp  target.hpp
src/Postmaster/: Error.hs  Esmtpd.hs  IO.hs  Log.hs  Prelude.hs  Rfc2821.hs
src/exe/: postmaster.hs
src/lib/: Prelude.hs
test/: Jamfile.v2  cf-file.cpp  pattern-matching.cpp  postmaster.cf  route-parser.cpp  strong-typedef.cpp
