name:          postmaster
version:       1.0.0
synopsis:      Postmaster ESMTP Server
description:   Postmaster implements an ESMTP server. Given a configuration, it starts up
               and listens for incoming SMTP connections, handles them, and pipes the
               accepted e-mail messages into an arbitrary local mailer of your choice. A
               good local mailer is Procmail. Beyond that, you can configure and modify
               every little step of the SMTP transaction. All the real work is done
               through call-back functions.
license:       AGPL-3
license-file:  LICENSE
copyright:     Peter Simons
maintainer:    Peter Simons <simons@cryp.to>
tested-with:   GHC == 8.6.5
category:      Network
homepage:      https://github.com/peti/postmaster
bug-reports:   https://github.com/peti/postmaster/issues
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: git://github.com/peti/postmaster.git

executable postmaster
  main-is:          Main.hs
  other-modules:    Paths_postmaster
                    Postmaster
                    Postmaster.Error
                    Postmaster.IO
                    Postmaster.Log
                    Postmaster.Prelude
  hs-source-dirs:   src
  build-depends:    base                 == 4.12.*
                  , bytestring           == 0.10.*
                  , data-default-class   == 0.1.*
                  , extra                == 1.6.*
                  , hsemail              == 2.2.*
                  , hsyslog              == 5.0.*
                  , lens                 == 4.17.*
                  , mtl                  == 2.2.*
                  , network              == 3.1.*
                  , optparse-applicative == 0.14.*
                  , parsec               == 3.1.*
                  , resolv               == 0.1.*
                  , text                 == 1.2.*
                  , tls                  == 1.5.*
                  , tls-session-manager  == 0.0.*
                  , unliftio             >= 0.2.11 && < 0.3
                  , unliftio-core        == 0.1.*
                  , x509-store           == 1.6.*
                  , x509-system          == 1.6.*
  default-language: Haskell2010
  ghc-options:      -threaded
