name:          postmaster
version:       1.0.0
synopsis:      Postmaster ESMTP Server
description:   Postmaster implements an ESMTP server. Given a configuration, it starts up
               and listens for incoming SMTP connections, handles them, and pipes the
               accepted e-mail messages into an arbitrary local mailer of your choice. A
               good local mailer is Procmail. Beyond that, you can configure and modify
               every little step of the SMTP transaction. All the real work is done
               through call-back functions.
license:       AGPL-3
license-file:  LICENSE
copyright:     Peter Simons
maintainer:    Peter Simons <simons@cryp.to>
tested-with:   GHC == 9.8.4 || == 9.10.2 || == 9.12.2
category:      Network
homepage:      https://github.com/peti/postmaster
bug-reports:   https://github.com/peti/postmaster/issues
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: https://github.com/peti/postmaster.git

executable postmaster
  main-is:          Main.hs
  other-modules:    Paths_postmaster
                    Postmaster
                    Postmaster.Error
                    Postmaster.Esmtpd
                    Postmaster.IO
                    Postmaster.Log
                    Postmaster.Prelude
                    Postmaster.Rfc2821
  hs-source-dirs:   src
  build-depends:    base
                  , bytestring
                  , data-default-class
                  , directory
                  , extra
                  , filepath
                  , hsemail
                  , hsyslog
                  , lens
                  , mtl
                  , network
                  , optparse-applicative
                  , parsec
                  , resolv
                  , resourcet
                  , text
                  , tls >= 2.1
                  , tls-session-manager
                  , unliftio
                  , unliftio-core
                  , crypton-x509-store
                  , crypton-x509-system
  default-language: Haskell2010
  ghc-options:      -threaded
